# yaak

./: .claude-context.md  .gitattributes  .gitignore  .oxfmtignore  .oxfmtrc.json  AGENTS.md  CONTRIBUTING.md  Cargo.toml  DEVELOPMENT.md  MCP_CLIENT_PLAN.md  PLAN-ephemeral-requests.md  PLAN.md  README.md  biome.json  devenv.nix  package-lock.json  package.json  tsconfig.json  vite.config.ts
.claude/: rules.md
.github/: pull_request_template.md
.vite-hooks/: pre-commit
.zed/: tasks.json
crates-cli/yaak-cli/: Cargo.toml  PLAN.md  README.md
crates-cli/yaak-cli/src/: cli.rs  context.rs  main.rs  plugin_events.rs  ui.rs  version_check.rs
crates-cli/yaak-cli/src/commands/: auth.rs  environment.rs  folder.rs  import_export.rs  mod.rs  plugin.rs  request.rs  send.rs  workspace.rs
crates-cli/yaak-cli/src/utils/: json.rs  mod.rs
crates-cli/yaak-cli/tests/: environment_commands.rs  folder_commands.rs  import_export_commands.rs  request_cli.rs  request_commands.rs  send_commands.rs  workspace_commands.rs
crates-cli/yaak-cli/tests/common/: http_server.rs  mod.rs
crates-proxy/yaak-proxy-lib/: Cargo.toml  package.json
crates-proxy/yaak-proxy-lib/bindings/: gen_models.ts  gen_rpc.ts  index.ts
crates-proxy/yaak-proxy-lib/migrations/: 00000001_init.sql
crates-proxy/yaak-proxy-lib/src/: actions.rs  db.rs  lib.rs  models.rs
crates-proxy/yaak-proxy-models/: Cargo.toml
crates-proxy/yaak-proxy-models/migrations/: 00000001_init.sql
crates-proxy/yaak-proxy-models/src/: error.rs  lib.rs  models.rs
crates-tauri/yaak-app-proxy/: .gitignore  Cargo.toml  package.json  tauri.conf.json  tauri.development.conf.json  tauri.release.conf.json
crates-tauri/yaak-app-proxy/capabilities/: default.json
crates-tauri/yaak-app-proxy/src/: lib.rs  main.rs  window_menu.rs
crates-tauri/yaak-tauri-utils/: Cargo.toml
crates-tauri/yaak-tauri-utils/src/: api_client.rs  lib.rs
crates-tauri/yaak-window/: Cargo.toml
crates-tauri/yaak-window/src/: lib.rs  window.rs  window_state.rs
crates/common/yaak-database/: Cargo.toml
crates/common/yaak-database/src/: connection_or_tx.rs  db_context.rs  error.rs  lib.rs  migrate.rs  traits.rs  update_source.rs  util.rs
crates/yaak/: Cargo.toml
crates/yaak-actions/: Cargo.toml
crates/yaak-actions-builtin/: Cargo.toml
crates/yaak-actions-builtin/src/: dependencies.rs  lib.rs
crates/yaak-actions-builtin/src/http/: mod.rs  send.rs
crates/yaak-actions/bindings/: ActionAvailability.ts  ActionError.ts  ActionGroupId.ts  ActionGroupMetadata.ts  ActionGroupSource.ts  ActionGroupWithActions.ts  ActionId.ts  ActionMetadata.ts  ActionParams.ts  ActionResult.ts  ActionScope.ts  ActionSource.ts  ActionTarget.ts  ContextRequirement.ts  CurrentContext.ts  InputPrompt.ts  RequiredContext.ts  SelectOption.ts
crates/yaak-actions/src/: context.rs  error.rs  executor.rs  groups.rs  handler.rs  lib.rs  types.rs
crates/yaak-common/: Cargo.toml
crates/yaak-common/src/: command.rs  lib.rs
crates/yaak-proxy/: Cargo.toml
crates/yaak-proxy/src/: body.rs  cert.rs  connection.rs  lib.rs  request.rs
crates/yaak/src/: error.rs  export.rs  import.rs  lib.rs  plugin_events.rs  render.rs  send.rs
flatpak/: app.yaak.Yaak.metainfo.xml  app.yaak.Yaak.yml  app.yaak.desktop.metainfo.xml  app.yaak.desktop.yml  generate-sources.sh  update-manifest.sh
npm/: README.md  prepare-publish.js
plugin-runtime-types/: package.json
scripts/: create-migration.cjs  install-wasm-pack.cjs  publish-core-plugins.cjs  replace-version.cjs  run-build.mjs  run-dev.mjs  run-workspaces-dev.mjs  vendor-deno.cjs  vendor-node.cjs  vendor-plugins.cjs  vendor-protoc.cjs
src-tauri/: .gitignore  Cargo.toml  tauri.conf.json  tauri.development.conf.json  tauri.release.conf.json
src-tauri/yaak-crypto/: Cargo.toml  build.rs  index.ts
src-tauri/yaak-crypto/permissions/: default.toml
src-tauri/yaak-crypto/permissions/autogenerated/: reference.md
src-tauri/yaak-crypto/permissions/autogenerated/commands/: enable_encryption.toml  reveal_workspace_key.toml  set_workspace_key.toml
src-tauri/yaak-crypto/permissions/schemas/: schema.json
src-tauri/yaak-crypto/src/: commands.rs  encryption.rs  error.rs  lib.rs  manager.rs  master_key.rs  persisted_key.rs  workspace_key.rs  workspace_keys.rs
src-tauri/yaak-git/: Cargo.toml  build.rs  index.ts
src-tauri/yaak-git/bindings/: gen_git.ts  gen_models.ts
src-tauri/yaak-git/permissions/: default.toml
src-tauri/yaak-git/permissions/autogenerated/: reference.md
src-tauri/yaak-git/permissions/schemas/: schema.json
src-tauri/yaak-git/src/: binary.rs  branch.rs  callbacks.rs  commands.rs  commit.rs  credential.rs  error.rs  fetch.rs  git.rs  lib.rs  log.rs  merge.rs  pull.rs  push.rs  remotes.rs  unstage.rs  util.rs
src-tauri/yaak-http/: Cargo.toml
src-tauri/yaak-http/src/: chained_reader.rs  client.rs  cookies.rs  decompress.rs  error.rs  lib.rs  manager.rs  path_placeholders.rs  proto.rs  sender.rs  tee_reader.rs  tls.rs  transaction.rs  types.rs
src-tauri/yaak-templates/: Cargo.toml  package.json
src-tauri/yaak-templates/pkg/: yaak_templates.d.ts  yaak_templates.js  yaak_templates_bg.js  yaak_templates_bg.wasm
src-tauri/yaak-templates/src/: format_json.rs  lib.rs  parser.rs  renderer.rs  wasm.rs
src-tauri/yaak-tls/: Cargo.toml
src-tauri/yaak-tls/src/: lib.rs
src-tauri/yaak-ws/: Cargo.toml  build.rs  index.ts
src-tauri/yaak-ws/permissions/: default.toml
src-tauri/yaak-ws/permissions/autogenerated/: reference.md
src-tauri/yaak-ws/permissions/schemas/: schema.json
src-tauri/yaak-ws/src/: cmd.rs  commands.rs  connect.rs  error.rs  lib.rs  manager.rs  render.rs
src-tauri/yaak_git/: Cargo.toml  build.rs  index.ts
src-tauri/yaak_git/bindings/: git.ts
src-tauri/yaak_git/permissions/: default.toml
src-tauri/yaak_git/permissions/autogenerated/: reference.md
src-tauri/yaak_git/permissions/schemas/: schema.json
src-tauri/yaak_git/src/: commands.rs  error.rs  errors.rs  fs_sync.rs  git.rs  lib.rs  model_hash.rs  models.rs
src-web/: font-size.ts  font.ts  index.html  main.css  main.tsx  modules.d.ts  package.json  (+5 more)
(+1335 files in other folders)
