[package]
name = "yaak-cli"
version = "0.1.0"
edition = "2024"
publish = false

[[bin]]
name = "yaak"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
dirs = "6"
tokio = { workspace = true, features = ["rt-multi-thread", "macros"] }
yaak-http = { workspace = true }
yaak-models = { workspace = true }
