[package]
name = "yaak-common"
version = "0.1.0"
edition = "2024"
publish = false

[features]
default = []
tauri = ["dep:tauri"]

[dependencies]
tauri = { workspace = true, optional = true }
reqwest = { workspace = true, features = ["system-proxy", "gzip"] }
thiserror = { workspace = true }
regex = "1.11.0"
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
