[package]
name = "yaak-crypto"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
aes-gcm = { version = "0.10.3", features = ["std"] }
base32 = "0.5.1" # For encoding human-readable key
base64 = "0.22.1" # For encoding in the database
base85 = "2.0.0" # For encoding the master key
keyring = { version = "4.0.0-alpha.1", features = ["vendored"] }
log = "0.4.26"
tauri = { workspace = true }
thiserror = "2.0.12"
yaak-models = { workspace = true }
