[package]
name = "yaak-git"
links = "yaak-git"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
yaak-models = { workspace = true }
chrono = { version = "0.4.38", features = ["serde"] }
git2 = "0.19.0"
serde = { version = "1.0.215", features = ["derive"] }
tauri = { workspace = true }
tempdir = "0.3.7"
thiserror = { workspace = true }
ts-rs = { workspace = true, features = ["chrono-impl", "serde-json-impl"] }
serde_yaml = "0.9.34"
log = "0.4.22"
serde_json = "1.0.132"

[build-dependencies]
tauri-plugin = { version = "2.0.3", features = ["build"] }
