[package]
name = "yaak-tls"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
log = { workspace = true }
rustls = { workspace = true, default-features = false, features = ["ring"] }
rustls-pemfile = "2"
rustls-platform-verifier = { workspace = true }
p12 = "0.6.3"
serde = { workspace = true, features = ["derive"] }
url = "2.5"
yaak-models = { workspace = true }
thiserror = "2.0.17"
