[package]
name = "yaak-ws"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
log = "0.4.20"
tokio = { version = "1.0", default-features = false, features = ["macros", "time", "test-util"] }
rustls = { version = "0.23.21", default-features = false, features = ["custom-provider", "ring"] }
rustls-platform-verifier = "0.5.0"
tokio-tungstenite = { version = "0.26.1", default-features = false, features = ["rustls-tls-native-roots", "connect"] }
thiserror = "2.0.11"
futures-util = "0.3.31"
